--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,8 @@
 }
 #datacanvas {
     border: 1px solid black;
-    width: 600px;
-    height: 600px;
+    width: 70vh;
+    height: 70vh;
 }
 
 .myclass {
@@ -12,7 +12,12 @@
 }
 
 #visualization {
-    width: 600px;
-    height: 600px;
+    width: 55vh;
+    height: 70vh;
     border: 1px solid lightgray;
+}
+
+#nodeCanvas {
+    width: 15vh;
+    height: 70vh;
 }
